docs/api/v/2024.2.3/ui/label.md
#![](../../../../../../images/luxe-dark.svg){width="96em"}

# `luxe` API (`2024.2.3`)  


---

## `luxe: ui/label` module

- [UIAutoSize](#uiautosize)   
- [UILabel](#uilabel)   
- [UIOverflowScroll](#uioverflowscroll)   

---

### UIAutoSize
`:::js import "luxe: ui/label" for UIAutoSize`
> no docs found

- [none](#UIAutoSize.none)
- [width](#UIAutoSize.width)
- [height](#UIAutoSize.height)
- [both](#UIAutoSize.both)

<hr/>
<endpoint module="luxe: ui/label" class="UIAutoSize" signature="none"></endpoint>
<signature id="UIAutoSize.none">UIAutoSize.none
<a class="headerlink" href="#UIAutoSize.none" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UIAutoSize" signature="width"></endpoint>
<signature id="UIAutoSize.width">UIAutoSize.width
<a class="headerlink" href="#UIAutoSize.width" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UIAutoSize" signature="height"></endpoint>
<signature id="UIAutoSize.height">UIAutoSize.height
<a class="headerlink" href="#UIAutoSize.height" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UIAutoSize" signature="both"></endpoint>
<signature id="UIAutoSize.both">UIAutoSize.both
<a class="headerlink" href="#UIAutoSize.both" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

### UILabel
`:::js import "luxe: ui/label" for UILabel`
> no docs found

- [create](#UILabel.create)(**ui_entity**: `Any`)
- [set_text](#UILabel.set_text+2)(**label**: `Any`, **text**: `Any`)
- [get_text](#UILabel.get_text)(**label**: `Any`)
- [get_render_text](#UILabel.get_render_text)(**label**: `Any`)
- [get_text_extents](#UILabel.get_text_extents+3)(**label**: `Any`, **offset**: `Any`, **count**: `Any`)
- [get_text_extents](#UILabel.get_text_extents)(**label**: `Any`)
- [set_font](#UILabel.set_font+2)(**label**: `Any`, **font**: `Any`)
- [get_font](#UILabel.get_font)(**label**: `Any`)
- [set_color](#UILabel.set_color+2)(**label**: `Any`, **color**: `Any`)
- [get_color](#UILabel.get_color)(**label**: `Any`)
- [set_color_hover](#UILabel.set_color_hover+2)(**label**: `Any`, **color**: `Any`)
- [get_color_hover](#UILabel.get_color_hover)(**label**: `Any`)
- [set_text_size](#UILabel.set_text_size+2)(**label**: `Any`, **size**: `Any`)
- [get_text_size](#UILabel.get_text_size)(**label**: `Any`)
- [set_align](#UILabel.set_align+2)(**label**: `Any`, **align**: `Any`)
- [get_align](#UILabel.get_align)(**label**: `Any`)
- [set_align_vertical](#UILabel.set_align_vertical+2)(**label**: `Any`, **align**: `Any`)
- [get_align_vertical](#UILabel.get_align_vertical)(**label**: `Any`)
- [set_text_style](#UILabel.set_text_style+2)(**label**: `Any`, **style**: `TextStyle`)
- [get_text_style](#UILabel.get_text_style)(**label**: `Any`)
- [set_max_visible](#UILabel.set_max_visible+2)(**label**: `Any`, **visible_count**: `Num`)
- [get_max_visible](#UILabel.get_max_visible)(**label**: `Any`)
- [set_auto_size](#UILabel.set_auto_size+2)(**label**: `Any`, **state**: `UIAutoSize`)
- [set_overflow_scroll](#UILabel.set_overflow_scroll+5)(**label**: `Any`, **type**: `UIOverflowScroll`, **speed**: `Num`, **wait**: `Num`, **pause**: `Num`)
- [set_overflow_scroll](#UILabel.set_overflow_scroll+4)(**label**: `Any`, **speed**: `Num`, **wait**: `Num`, **pause**: `Num`)
- [set_loc](#UILabel.set_loc+3)(**label**: `Any`, **space**: `String`, **key**: `String`)
- [set_loc](#UILabel.set_loc+2)(**label**: `Any`, **key**: `String`)
- [set_loc_with_args](#UILabel.set_loc_with_args+4)(**label**: `Any`, **space**: `String`, **key**: `String`, **args**: `List`)
- [set_loc_with_args](#UILabel.set_loc_with_args+3)(**label**: `Any`, **key**: `String`, **args**: `List`)
- [set_outline](#UILabel.set_outline+5)(**control**: `UILabel`, **radius**: `Num`, **softness**: `Num`, **color**: `Color`, **offset**: `Float2`)
- [set_shadow](#UILabel.set_shadow+5)(**control**: `UILabel`, **radius**: `Num`, **softness**: `Num`, **color**: `Color`, **offset**: `Float2`)

<hr/>
<endpoint module="luxe: ui/label" class="UILabel" signature="create(ui_entity : Any)"></endpoint>
<signature id="UILabel.create">UILabel.create(**ui_entity**: `Any`)
<a class="headerlink" href="#UILabel.create" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js UILabel`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_text(label : Any, text : Any)"></endpoint>
<signature id="UILabel.set_text+2">UILabel.set_text(**label**: `Any`, **text**: `Any`)
<a class="headerlink" href="#UILabel.set_text+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js None`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_text(label : Any)"></endpoint>
<signature id="UILabel.get_text">UILabel.get_text(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_text" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js String`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_render_text(label : Any)"></endpoint>
<signature id="UILabel.get_render_text">UILabel.get_render_text(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_render_text" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_text_extents(label : Any, offset : Any, count : Any)"></endpoint>
<signature id="UILabel.get_text_extents+3">UILabel.get_text_extents(**label**: `Any`, **offset**: `Any`, **count**: `Any`)
<a class="headerlink" href="#UILabel.get_text_extents+3" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_text_extents(label : Any)"></endpoint>
<signature id="UILabel.get_text_extents">UILabel.get_text_extents(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_text_extents" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_font(label : Any, font : Any)"></endpoint>
<signature id="UILabel.set_font+2">UILabel.set_font(**label**: `Any`, **font**: `Any`)
<a class="headerlink" href="#UILabel.set_font+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_font(label : Any)"></endpoint>
<signature id="UILabel.get_font">UILabel.get_font(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_font" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_color(label : Any, color : Any)"></endpoint>
<signature id="UILabel.set_color+2">UILabel.set_color(**label**: `Any`, **color**: `Any`)
<a class="headerlink" href="#UILabel.set_color+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_color(label : Any)"></endpoint>
<signature id="UILabel.get_color">UILabel.get_color(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_color" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_color_hover(label : Any, color : Any)"></endpoint>
<signature id="UILabel.set_color_hover+2">UILabel.set_color_hover(**label**: `Any`, **color**: `Any`)
<a class="headerlink" href="#UILabel.set_color_hover+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_color_hover(label : Any)"></endpoint>
<signature id="UILabel.get_color_hover">UILabel.get_color_hover(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_color_hover" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_text_size(label : Any, size : Any)"></endpoint>
<signature id="UILabel.set_text_size+2">UILabel.set_text_size(**label**: `Any`, **size**: `Any`)
<a class="headerlink" href="#UILabel.set_text_size+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_text_size(label : Any)"></endpoint>
<signature id="UILabel.get_text_size">UILabel.get_text_size(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_text_size" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_align(label : Any, align : Any)"></endpoint>
<signature id="UILabel.set_align+2">UILabel.set_align(**label**: `Any`, **align**: `Any`)
<a class="headerlink" href="#UILabel.set_align+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_align(label : Any)"></endpoint>
<signature id="UILabel.get_align">UILabel.get_align(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_align" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_align_vertical(label : Any, align : Any)"></endpoint>
<signature id="UILabel.set_align_vertical+2">UILabel.set_align_vertical(**label**: `Any`, **align**: `Any`)
<a class="headerlink" href="#UILabel.set_align_vertical+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_align_vertical(label : Any)"></endpoint>
<signature id="UILabel.get_align_vertical">UILabel.get_align_vertical(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_align_vertical" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_text_style(label : Any, style : TextStyle)"></endpoint>
<signature id="UILabel.set_text_style+2">UILabel.set_text_style(**label**: `Any`, **style**: `TextStyle`)
<a class="headerlink" href="#UILabel.set_text_style+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js None`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_text_style(label : Any)"></endpoint>
<signature id="UILabel.get_text_style">UILabel.get_text_style(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_text_style" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js TextStyle`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_max_visible(label : Any, visible_count : Num)"></endpoint>
<signature id="UILabel.set_max_visible+2">UILabel.set_max_visible(**label**: `Any`, **visible_count**: `Num`)
<a class="headerlink" href="#UILabel.set_max_visible+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js None`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="get_max_visible(label : Any)"></endpoint>
<signature id="UILabel.get_max_visible">UILabel.get_max_visible(**label**: `Any`)
<a class="headerlink" href="#UILabel.get_max_visible" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js Num`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_auto_size(label : Any, state : UIAutoSize)"></endpoint>
<signature id="UILabel.set_auto_size+2">UILabel.set_auto_size(**label**: `Any`, **state**: `UIAutoSize`)
<a class="headerlink" href="#UILabel.set_auto_size+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js None`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_overflow_scroll(label : Any, type : UIOverflowScroll, speed : Num, wait : Num, pause : Num)"></endpoint>
<signature id="UILabel.set_overflow_scroll+5">UILabel.set_overflow_scroll(**label**: `Any`, **type**: `UIOverflowScroll`, **speed**: `Num`, **wait**: `Num`, **pause**: `Num`)
<a class="headerlink" href="#UILabel.set_overflow_scroll+5" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js None`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_overflow_scroll(label : Any, speed : Num, wait : Num, pause : Num)"></endpoint>
<signature id="UILabel.set_overflow_scroll+4">UILabel.set_overflow_scroll(**label**: `Any`, **speed**: `Num`, **wait**: `Num`, **pause**: `Num`)
<a class="headerlink" href="#UILabel.set_overflow_scroll+4" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js None`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_loc(label : Any, space : String, key : String)"></endpoint>
<signature id="UILabel.set_loc+3">UILabel.set_loc(**label**: `Any`, **space**: `String`, **key**: `String`)
<a class="headerlink" href="#UILabel.set_loc+3" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js None`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_loc(label : Any, key : String)"></endpoint>
<signature id="UILabel.set_loc+2">UILabel.set_loc(**label**: `Any`, **key**: `String`)
<a class="headerlink" href="#UILabel.set_loc+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_loc_with_args(label : Any, space : String, key : String, args : List)"></endpoint>
<signature id="UILabel.set_loc_with_args+4">UILabel.set_loc_with_args(**label**: `Any`, **space**: `String`, **key**: `String`, **args**: `List`)
<a class="headerlink" href="#UILabel.set_loc_with_args+4" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js None`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_loc_with_args(label : Any, key : String, args : List)"></endpoint>
<signature id="UILabel.set_loc_with_args+3">UILabel.set_loc_with_args(**label**: `Any`, **key**: `String`, **args**: `List`)
<a class="headerlink" href="#UILabel.set_loc_with_args+3" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_outline(control : UILabel, radius : Num, softness : Num, color : Color, offset : Float2)"></endpoint>
<signature id="UILabel.set_outline+5">UILabel.set_outline(**control**: `UILabel`, **radius**: `Num`, **softness**: `Num`, **color**: `Color`, **offset**: `Float2`)
<a class="headerlink" href="#UILabel.set_outline+5" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js None`
> Set the text outline parameters.   

<endpoint module="luxe: ui/label" class="UILabel" signature="set_shadow(control : UILabel, radius : Num, softness : Num, color : Color, offset : Float2)"></endpoint>
<signature id="UILabel.set_shadow+5">UILabel.set_shadow(**control**: `UILabel`, **radius**: `Num`, **softness**: `Num`, **color**: `Color`, **offset**: `Float2`)
<a class="headerlink" href="#UILabel.set_shadow+5" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js None`
> Set the text shadow parameters.   

### UIOverflowScroll
`:::js import "luxe: ui/label" for UIOverflowScroll`
> no docs found

- [none](#UIOverflowScroll.none)
- [always](#UIOverflowScroll.always)
- [width_overflow](#UIOverflowScroll.width_overflow)

<hr/>
<endpoint module="luxe: ui/label" class="UIOverflowScroll" signature="none"></endpoint>
<signature id="UIOverflowScroll.none">UIOverflowScroll.none
<a class="headerlink" href="#UIOverflowScroll.none" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UIOverflowScroll" signature="always"></endpoint>
<signature id="UIOverflowScroll.always">UIOverflowScroll.always
<a class="headerlink" href="#UIOverflowScroll.always" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: ui/label" class="UIOverflowScroll" signature="width_overflow"></endpoint>
<signature id="UIOverflowScroll.width_overflow">UIOverflowScroll.width_overflow
<a class="headerlink" href="#UIOverflowScroll.width_overflow" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

